Updated project section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="description" content="Abduzar Khabib – Front-End Developer crafting modern websites with React, Tailwind, and motion design. View projects, contact me, or download my CV." />
+    <meta name="keywords" content="Front-End Developer, React, Tailwind CSS, Portfolio, JavaScript, Web Developer" />
+    <meta name="author" content="Abduzar Khabib" />
+    <meta property="og:title" content="Abduzar.dev - Front-End Developer Portfolio" />
+    <meta property="og:description" content="Explore the work and projects of Abduzar Khabib – a front-end developer focused on clean UI, responsive design, and modern web tools." />
+    <meta property="og:url" content="https://abduzar.dev" />
+    <meta property="og:type" content="website" />
+    <!-- <meta property="og:image" content="https://abduzar.dev/preview.png" /> -->
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
