Added SEO meta, OG tags, favicon and Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Abduzar Khabib – Front-End Developer crafting modern websites with React, Tailwind, and motion design. View projects, contact me, or download my CV." />
-    <meta name="keywords" content="Front-End Developer, React, Tailwind CSS, Portfolio, JavaScript, Web Developer" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- ✅ SEO META -->
+    <title>Abduzar Khabib — Front-End Developer</title>
+    <meta name="description" content="Portfolio of Abduzar Khabib, a front-end developer building sleek, responsive websites using React, Tailwind CSS, and modern APIs." />
+    <meta name="keywords" content="Abduzar, frontend, developer, React, Tailwind, portfolio, web developer" />
     <meta name="author" content="Abduzar Khabib" />
-    <meta property="og:title" content="Abduzar.dev - Front-End Developer Portfolio" />
-    <meta property="og:description" content="Explore the work and projects of Abduzar Khabib – a front-end developer focused on clean UI, responsive design, and modern web tools." />
+
+    <!-- ✅ OG TAGS -->
+    <meta property="og:title" content="Abduzar Khabib — Front-End Developer" />
+    <meta property="og:description" content="Building sleek, responsive websites with React and Tailwind CSS." />
+    <meta property="og:image" content="https://abduzar.dev/og-cover.jpg" />
     <meta property="og:url" content="https://abduzar.dev" />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="https://abduzar.dev/preview.png" /> -->
-    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
 
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abduzar.dev</title>
+    <!-- ✅ TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Abduzar Khabib — Front-End Developer" />
+    <meta name="twitter:description" content="Sleek and responsive React websites built by Abduzar." />
+    <meta name="twitter:image" content="https://abduzar.dev/og-cover.jpg" />
+
+    <!-- ✅ FAVICON -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- ✅ GOOGLE ANALYTICS -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KDZWL6T698"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-KDZWL6T698');
+    </script>
   </head>
   <body>
     <div id="root"></div>
