📈 Add JSON-LD structured data for rich results

--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
       gtag('js', new Date());
       gtag('config', 'G-KDZWL6T698');
     </script>
+
+    <!-- ✅ JSON-LD SCHEMA for Rich Results -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Abduzar Khabib",
+      "jobTitle": "Front-End Developer",
+      "url": "https://abduzar.dev",
+      "sameAs": [
+        "https://github.com/abduzar-coding",
+        "https://www.linkedin.com/in/abduzar-khabib"
+      ],
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Freelance"
+      },
+      "knowsAbout": ["React", "Tailwind CSS", "JavaScript", "APIs", "Vite", "Front-End Development"],
+      "description": "Front-end developer building sleek, responsive, and modern websites using React and Tailwind CSS."
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
